[tool.poetry]
name = "auto-gpt"
version = "0.1.0"
description = ""
authors = ["Merwane Hamadi <merwanehamadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
yfinance = "^0.2.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
