[tool.poetry]
name = "auto-gpt"
version = "0.1.0"
description = ""
authors = ["Merwane Hamadi <merwanehamadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
yfinance = "^0.2.30"
tiktoken = "^0.5.1"
selenium = "^4.14.0"
html2text = "^2020.1.16"
weaviate-client = "^3.24.2"
duckpy = "^3.2.0"
pylint = "^3.0.1"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
